Dropdown menüs für Orte

--- a/index.html
+++ b/index.html
@@ -99,6 +99,16 @@
             @apply bg-gray-100 p-4 rounded-lg shadow-inner;
             margin-bottom: 1rem;
         }
+        /* NEU: Styles für die Ortsverwaltung in den Einstellungen */
+        .location-management-item {
+            @apply flex justify-between items-center p-2 bg-white rounded-md shadow-sm;
+        }
+        .location-management-item .remove-location-btn {
+            @apply text-red-400 hover:text-red-600 text-xl leading-none;
+        }
+        #locations-list {
+            @apply space-y-2;
+        }
         .day-section:last-child {
             margin-bottom: 0;
         }
@@ -235,8 +245,9 @@
             <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 mb-4">
                 <label for="newNotesInput" class="sr-only">Notizen</label>
                 <input type="text" id="newNotesInput" placeholder="Notizen (optional)..." class="flex-grow p-3 border border-gray-300 rounded-lg">
-                <label for="newLocationInput" class="sr-only">Ort</label>
-                <input type="text" id="newLocationInput" placeholder="Ort (optional, z.B. Unterwegs)" class="md:w-1/3 p-3 border border-gray-300 rounded-lg">
+                <label for="newLocationSelect" class="sr-only">Ort</label>
+                <!-- GEÄNDERT: von input zu select -->
+                <select id="newLocationSelect" class="md:w-1/3 p-3 border border-gray-300 rounded-lg bg-white"></select>
             </div>
 
             <div class="flex flex-col md:flex-row justify-between items-start space-y-4 md:space-y-0 md:space-x-4">
@@ -379,6 +390,18 @@
                     <p class="text-sm text-gray-500 ml-8 mt-1">(Beeinflusst die Sortierung, wenn "Manuell Sortieren" deaktiviert ist)</p>
                 </div>
 
+                <!-- NEU: Ortsverwaltung -->
+                <div class="mb-8">
+                    <p class="block text-gray-700 text-base font-semibold mb-3">Orte verwalten</p>
+                    <div id="locations-list" class="mb-4">
+                        <!-- Liste der Orte wird hier dynamisch eingefügt -->
+                    </div>
+                    <div class="flex gap-2">
+                        <input type="text" id="new-location-input" placeholder="Neuen Ort hinzufügen..." class="flex-grow p-2 border border-gray-300 rounded-lg">
+                        <button id="add-location-btn" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg">Hinzufügen</button>
+                    </div>
+                </div>
+
                 <div class="mb-8">
                     <p class="block text-gray-700 text-base font-semibold mb-3">Verfügbare Zeitfenster pro Wochentag</p>
                     <div id="dailyTimeslotsContainer" class="space-y-6">
@@ -423,8 +446,9 @@
                 </div>
 
                 <div class="mb-6">
-                    <label for="edit-location" class="block text-gray-700 text-sm font-bold mb-2">Ort (Optional):</label>
-                    <input type="text" id="edit-location" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-primary focus:border-primary" placeholder="z.B. Unterwegs, Büro, Zuhause">
+                    <label for="edit-location-select" class="block text-gray-700 text-sm font-bold mb-2">Ort (Optional):</label>
+                    <!-- GEÄNDERT: von input zu select -->
+                    <select id="edit-location-select" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-primary focus:border-primary bg-white"></select>
                 </div>
 
                 <div id="editVorteilDauerInputs" class="edit-inputs mb-6 hidden">
